re PR rtl-optimization/14749 (Miscompilation of bit test)

PR opt/14749
	* expr.c (do_jump): If TREE_CONSTANT_OVERFLOW is set, don't
	trust integer_zerop.  Just expand both branches.

From-SVN: r81630