gcc/expr.c
@@ -9891,6 +9891,9 @@ do_jump (exp, if_false_label, if_true_label)
       break;
 
     case INTEGER_CST:
+      /* ??? This should never happen - but it does, GCC PR opt/14749.  */
+      if (TREE_CONSTANT_OVERFLOW (exp))
+	goto normal;
       temp = integer_zerop (exp) ? if_false_label : if_true_label;
       if (temp)
 	emit_jump (temp);
